Fixing search submit style on mobile iOS

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -33,6 +33,11 @@ body
   background: $purple
   color: $base-color
 
+input 
+  -webkit-appearance: none
+  -webkit-border-radius: 0
+  border-radius: 0
+
 h1
   padding: 5px
   text-align: center
